--- a/app/src/main/res/drawable/blur_line.xml
+++ b/app/src/main/res/drawable/blur_line.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:top="-4dp" android:left="-4dp" android:right="-4dp" android:bottom="0dp">
+    <item android:top="0dp" android:left="0dp" android:right="0dp" android:bottom="0dp">
         <shape android:shape="rectangle">
-            <solid android:color="#80000000" /> <!-- Màu nền mờ -->
-            <corners android:radius="2dp" /> <!-- Độ bo góc -->
+            <solid android:color="#C0C0C0" /> <!-- Màu nền mờ -->
+            <corners android:radius="0dp" /> <!-- Độ bo góc -->
         </shape>
     </item>
 </layer-list>
