--- a/app/src/main/res/layout/account_view.xml
+++ b/app/src/main/res/layout/account_view.xml
@@ -16,15 +16,16 @@
                 android:id="@+id/iv_profile"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                android:layout_marginTop="5dp"
                 android:src="@drawable/profile"/>
             <TextView
                 android:id="@+id/tv_hi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Xin chào, "
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="15dp"
                 android:layout_toRightOf="@id/iv_profile"
-                android:textSize="22sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="#000000"/>
             <TextView
@@ -34,19 +35,19 @@
                 android:text="Nguyen Ha"
                 android:layout_marginLeft="3dp"
                 android:layout_toRightOf="@id/tv_hi"
-                android:textSize="22sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="#F54500"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Chúc bạn có một ngày vui vẻ!"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="15dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="30dp"
                 android:layout_below="@id/tv_hi"
                 android:layout_toRightOf="@id/iv_profile"
-                android:textSize="15sp"
+                android:textSize="13sp"
                 android:textColor="#000000"/>
     </RelativeLayout>
 
@@ -79,7 +80,7 @@
                 android:text="Chỉnh sửa thông tin"
                 android:textAllCaps="false"
                 android:textColor="#666666"
-                android:textSize="15sp" />
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -98,13 +99,13 @@
                 android:id="@+id/btn_my_Room"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:text="Phòng của tôi"
+                android:text="Bài đăng của tôi"
                 android:paddingLeft="10dp"
                 android:textColor="#666666"
                 android:textAllCaps="false"
                 style="@style/Widget.Material3.Button.IconButton"
                 android:gravity="left|center"
-                android:textSize="15sp"/>
+                android:textSize="14sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -130,7 +131,7 @@
                 android:text="Phòng yêu thích"
                 android:textAllCaps="false"
                 android:textColor="#666666"
-                android:textSize="15sp" />
+                android:textSize="14sp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -152,22 +153,22 @@
                 android:layout_height="60dp"
                 android:gravity="left|center"
                 android:paddingLeft="10dp"
-                android:text="Tìm ở ghép của tôi"
+                android:text="Tìm ở ghép"
                 android:textAllCaps="false"
                 android:textColor="#666666"
-                android:textSize="15sp" />
+                android:textSize="14sp" />
         </LinearLayout>
 
         <Button
             android:id="@+id/btn_logout"
             android:height="30dp"
-            android:layout_width="300dp"
+            android:layout_width="350dp"
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="25dp"
             android:background="@drawable/custom_button_login"
             android:text="Đăng xuất"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textAllCaps="false"
             android:textColor="#FFFFFF" />
 
