--- a/app/src/main/res/layout/login_view.xml
+++ b/app/src/main/res/layout/login_view.xml
@@ -47,8 +47,8 @@
             android:drawablePadding="8dp"
             android:hint="Tên tài khoản"
             android:paddingLeft="20dp"
-            android:textColor="#000000"
-            android:textColorHint="@android:color/black"
+            android:textColor="@android:color/black"
+            android:textColorHint="#666666"
             android:textCursorDrawable="@drawable/cursor_edittext"
             android:textSize="20dp" />
 
@@ -65,7 +65,7 @@
             android:inputType="textPassword"
             android:paddingLeft="20dp"
             android:textColor="@android:color/black"
-            android:textColorHint="@android:color/black"
+            android:textColorHint="#666666"
             android:textCursorDrawable="@drawable/cursor_edittext"
             android:textSize="20dp" />
 
@@ -99,13 +99,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="700dp">
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp">
 
         <TextView
             android:id="@+id/tv_no_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:text="Bạn chưa có tài khoản?"
             android:textColor="@color/black"
             android:textSize="20dp" />
@@ -114,7 +114,6 @@
             android:id="@+id/tv_signup"
             android:layout_toRightOf="@id/tv_no_account"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Đăng ký"
