--- a/app/src/main/res/layout/main__menu.xml
+++ b/app/src/main/res/layout/main__menu.xml
@@ -10,13 +10,14 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottom_navigation"
-        android:layout_marginBottom="-19dp" />
+        android:layout_above="@id/imageView"
+        android:layout_marginBottom="2dp" />
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:layout_alignTop="@id/bottom_navigation"
+        android:layout_height="1px"
+        android:layout_above="@id/bottom_navigation"
         android:background="@drawable/blur_line" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -24,9 +25,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp"
         android:background="@color/white"
         app:itemIconTint="@color/nav_color"
         app:itemTextColor="@color/nav_color"
-        app:menu="@menu/main_menu"/>
+        app:menu="@menu/main_menu" />
 
 </RelativeLayout>
