--- a/app/src/main/res/layout/post_room_step1.xml
+++ b/app/src/main/res/layout/post_room_step1.xml
@@ -23,8 +23,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:src="@drawable/location" />
                 <TextView
                     android:layout_width="wrap_content"
@@ -53,6 +53,7 @@
 
                 <Spinner
                     android:id="@+id/spn_city_push_room"
+                    android:paddingLeft="10dp"
                     android:layout_width="330dp"
                     android:layout_height="40dp"
                     android:background="@drawable/custom_spinner_rim" />
@@ -63,8 +64,8 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/baseline_arrow_drop_down_24"/>
+                    android:layout_marginRight="30dp"
+                    android:src="@drawable/arrow"/>
             </RelativeLayout>
 
             <TextView
@@ -83,6 +84,7 @@
 
                 <Spinner
                     android:id="@+id/spn_district_push_room"
+                    android:paddingLeft="10dp"
                     android:layout_width="330dp"
                     android:layout_height="40dp"
                     android:background="@drawable/custom_spinner_rim" />
@@ -93,8 +95,8 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/baseline_arrow_drop_down_24"/>
+                    android:layout_marginRight="30dp"
+                    android:src="@drawable/arrow"/>
             </RelativeLayout>
 
             <TextView
@@ -113,6 +115,7 @@
 
                 <Spinner
                     android:id="@+id/spn_ward_push_room"
+                    android:paddingLeft="10dp"
                     android:layout_width="330dp"
                     android:layout_height="40dp"
                     android:background="@drawable/custom_spinner_rim" />
@@ -123,8 +126,8 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/baseline_arrow_drop_down_24"/>
+                    android:layout_marginRight="30dp"
+                    android:src="@drawable/arrow"/>
             </RelativeLayout>
 
             <TextView
