--- a/app/src/main/res/layout/reset_password.xml
+++ b/app/src/main/res/layout/reset_password.xml
@@ -44,7 +44,7 @@
             android:hint="Email"
             android:paddingLeft="20dp"
             android:textColor="@android:color/black"
-            android:textColorHint="@android:color/black"
+            android:textColorHint="#666666"
             android:textCursorDrawable="@drawable/cursor_edittext"
             android:textSize="20dp" />
 
