--- a/app/src/main/res/layout/signup_view.xml
+++ b/app/src/main/res/layout/signup_view.xml
@@ -34,7 +34,7 @@
             android:hint="Họ tên"
             android:paddingLeft="20dp"
             android:textColor="#000000"
-            android:textColorHint="@android:color/black"
+            android:textColorHint="#666666"
             android:textCursorDrawable="@drawable/cursor_edittext"
             android:textSize="20dp" />
 
@@ -50,7 +50,7 @@
             android:hint="Email"
             android:paddingLeft="20dp"
             android:textColor="@android:color/black"
-            android:textColorHint="@android:color/black"
+            android:textColorHint="#666666"
             android:textCursorDrawable="@drawable/cursor_edittext"
             android:textSize="20dp" />
 
@@ -66,7 +66,7 @@
             android:hint="Số diện thoại"
             android:paddingLeft="20dp"
             android:textColor="@android:color/black"
-            android:textColorHint="@android:color/black"
+            android:textColorHint="#666666"
             android:textCursorDrawable="@drawable/cursor_edittext"
             android:textSize="20dp" />
 
@@ -83,7 +83,7 @@
             android:inputType="textPassword"
             android:paddingLeft="20dp"
             android:textColor="@android:color/black"
-            android:textColorHint="@android:color/black"
+            android:textColorHint="#666666"
             android:textCursorDrawable="@drawable/cursor_edittext"
             android:textSize="20dp" />
 
@@ -114,7 +114,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="700dp">
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp">
 
         <TextView
             android:id="@+id/tv_no_account"
