--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,13 @@
          <item name="colorPrimaryVariant">#F54500</item>
          <item name="colorOnPrimary">#FFFFFF</item>
     </style>
-
+    <style name="ToolbarTitleStyle">
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="Theme.Fab_Bottom_app_bar" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">#F54500</item>
+        <item name="colorPrimaryVariant">#F54500</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
+    </style>
     <style name="Theme.TingTongApp" parent="Base.Theme.TingTongApp" />
 </resources>
