--- a/app/src/main/res/layout/account_view.xml
+++ b/app/src/main/res/layout/account_view.xml
@@ -25,7 +25,7 @@
                 android:text="Xin chào, "
                 android:layout_marginLeft="15dp"
                 android:layout_toRightOf="@id/iv_profile"
-                android:textSize="18sp"
+                android:textSize="25dp"
                 android:textStyle="bold"
                 android:textColor="#000000"/>
             <TextView
@@ -35,7 +35,7 @@
                 android:text="Nguyen Ha"
                 android:layout_marginLeft="3dp"
                 android:layout_toRightOf="@id/tv_hi"
-                android:textSize="18sp"
+                android:textSize="25dp"
                 android:textStyle="bold"
                 android:textColor="#F54500"/>
             <TextView
@@ -47,7 +47,7 @@
                 android:layout_marginRight="30dp"
                 android:layout_below="@id/tv_hi"
                 android:layout_toRightOf="@id/iv_profile"
-                android:textSize="13sp"
+                android:textSize="18dp"
                 android:textColor="#000000"/>
     </RelativeLayout>
 
@@ -80,7 +80,7 @@
                 android:text="Chỉnh sửa thông tin"
                 android:textAllCaps="false"
                 android:textColor="#666666"
-                android:textSize="14sp" />
+                android:textSize="18dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -105,7 +105,7 @@
                 android:textAllCaps="false"
                 style="@style/Widget.Material3.Button.IconButton"
                 android:gravity="left|center"
-                android:textSize="14sp"/>
+                android:textSize="18dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -131,7 +131,7 @@
                 android:text="Phòng yêu thích"
                 android:textAllCaps="false"
                 android:textColor="#666666"
-                android:textSize="14sp" />
+                android:textSize="18dp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -156,7 +156,7 @@
                 android:text="Tìm ở ghép"
                 android:textAllCaps="false"
                 android:textColor="#666666"
-                android:textSize="14sp" />
+                android:textSize="18dp" />
         </LinearLayout>
 
         <Button
@@ -168,7 +168,7 @@
             android:layout_marginTop="25dp"
             android:background="@drawable/custom_button_login"
             android:text="Đăng xuất"
-            android:textSize="14sp"
+            android:textSize="20dp"
             android:textAllCaps="false"
             android:textColor="#FFFFFF" />
 
