--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".LoginView">
+    tools:context=".Views.LoginView">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nested_scroll_main_view"
