--- a/app/src/main/res/layout/reset_password.xml
+++ b/app/src/main/res/layout/reset_password.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".ResetPassword">
+    tools:context=".Views.ResetPassword">
 
     <ImageView
         android:id="@+id/imageView"
