--- a/app/src/main/res/layout/element_list_find_room_view.xml
+++ b/app/src/main/res/layout/element_list_find_room_view.xml
@@ -57,7 +57,6 @@
                         android:text="Nguyễn Thiên Lý"
                         android:textColor="#666666"
                         android:textSize="16sp" />
-                    />
 
                     <ImageView
                         android:id="@+id/img_gender_user"
@@ -83,9 +82,8 @@
                         android:lineSpacingExtra="5dp"
                         android:maxLines="2"
                         android:text="500,000đ - 5,00,000đ"
-                        android:textColor="#00BFFF"
+                        android:textColor="#F54500"
                         android:textSize="14sp" />
-                    />
                 </LinearLayout>
 
                 <LinearLayout
@@ -110,7 +108,6 @@
                     android:text="10/22/2018 "
                     android:textColor="#666666"
                     android:textSize="12dp" />
-                />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
