--- a/app/src/main/res/layout/location_search.xml
+++ b/app/src/main/res/layout/location_search.xml
@@ -11,8 +11,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
         android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -25,9 +25,10 @@
             android:src="@drawable/left" />
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginRight="10dp"
+            android:layout_weight="1"
             android:layout_marginLeft="7dp"
             android:gravity="center_vertical">
 
@@ -36,7 +37,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
                 android:background="@drawable/frame"
                 android:hint="Gần trường, công ty, chợ..."
                 android:paddingLeft="110dp"
@@ -57,6 +57,14 @@
                 android:textColor="@color/white"
                 android:textSize="15dp" />
         </RelativeLayout>
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/search"/>
+
     </LinearLayout>
 
     <LinearLayout
