--- a/app/src/main/res/layout/account_view.xml
+++ b/app/src/main/res/layout/account_view.xml
@@ -28,16 +28,16 @@
                 android:textSize="25dp"
                 android:textStyle="bold"
                 android:textColor="#000000"/>
-            <TextView
-                android:id="@+id/tv_hi2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nguyen Ha"
-                android:layout_marginLeft="3dp"
-                android:layout_toRightOf="@id/tv_hi"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                android:textColor="#F54500"/>
+
+        <TextView
+            android:id="@+id/tv_hi2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
+            android:layout_toRightOf="@id/tv_hi"
+            android:textColor="#F54500"
+            android:textSize="25dp"
+            android:textStyle="bold" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
