--- a/app/src/main/res/layout/activity_search_view.xml
+++ b/app/src/main/res/layout/activity_search_view.xml
@@ -63,14 +63,17 @@
                         android:text="Hà Nội"
                         android:textColor="@color/white"
                         android:textSize="15dp" />
+
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="15dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/search"/>
                 </RelativeLayout>
 
-                <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="15dp"
-                    android:src="@drawable/search"/>
             </LinearLayout>
 
             <LinearLayout
