--- a/app/src/main/res/layout/post_room_main.xml
+++ b/app/src/main/res/layout/post_room_main.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:backgroundTint="@color/white"
+    android:background="@color/white"
     android:orientation="vertical">
     <include
         android:id="@+id/toolbar"
