--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -160,7 +160,7 @@
                             android:hint="Tìm theo quận, địa điểm?"
                             android:paddingLeft="20dp"
                             android:drawableLeft="@drawable/search"
-                            android:drawablePadding="15dp"
+                            android:drawablePadding="16dp"
                             android:textColor="#000000"
                             android:textColorHint="#000000"
                             android:textSize="16dp" />
@@ -187,9 +187,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
-                    android:text="Khu vực có nhiều phòng"
+                    android:text="Khu vực nhiều phòng"
                     android:textColor="#000000"
-                    android:textSize="18dp"
+                    android:textSize="20dp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -229,7 +229,7 @@
                     android:text="Phòng mới đăng"
                     android:textStyle="bold"
                     android:textColor="#000000"
-                    android:textSize="18dp" />
+                    android:textSize="20dp" />
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
